	- GetCustomCacheValue(string CustomCacheTag) - Returns the current cached value for the specified CustomCacheTag. Will return 0 by default if the provided tag has not been evaluated.
* EntityFamiliar:
	- InvalidateCachedMultiplier() - Makes it so that the next time GetMultiplier is called, MC_EVALUATE_FAMILIAR_MULTIPLIER is triggered to recalculate/allow modifying the multiplier.
* EntityNPC:
	- SetFlyingOverride(bool) - Sets an override to the return value of IsFlying, which is normally based on EntityGridCollisionClass. Can be used to make grounded enemies ignore creep, or flying enemies get hit by creep.
	- ClearFlyingOverride() - Removes any value set by SetFlyingOverride.
	- TrySplit(float DefaultDamage, EntityRef Source, DoScreenEffects = true)
* EntityLaser:
	- RecalculateSamplesNextUpdate() - Requests the laser's shape to be fully recalculated next time it updates. Can be used to force the laser to instantly change its MaxDistance/Radius instead of transitioning to it. No effect for OneHit or non-sample lasers.
	- IsMultidimensionalTouched()
	- [Is/Set]PrismTouched()
* EntityTear:
	- [Is/Set]MultidimensionalTouched()
	- [Is/Set]PrismTouched()
* EntityBomb:
	- [Is/Set]PrismTouched()
* EntityKnife:
	- [Is/Set]MultidimensionalTouched()
	- [Is/Set]PrismTouched()
* EntityPickup:
	- TriggerTheresOptionsPickup() - Removes pickups with the same option group (OptionsPickupIndex) as the target pickup.
* LayerState:
	- GetFlip[X/Y](), SetFlip[X/Y]()
* Game:
	- GetGenericPrompt()
* Level:
	- GetMyosotisPickups() - returns the pickups that will be transferred to the next floor by the myosotis trinket effect
* ItemConfigItem:
	- HasCustomCacheTag
	- GetCustomCacheTags
* Added support for a "customcache" attribute in items.xml
	- Formatted as a space-separated list of string tags, same as other similar attributes.
	- Capitalization is ignored - tags are converted to all lowercase.