@@ -10,6 +10,11 @@ __thiscall void Entity_Familiar::Constructor();
 "8b41??483dea000000":
 __thiscall int Entity_Familiar::GetFollowerPriority();
 
+// GetMultiplier returns a float in XMM0/ST0 (or whatever), but ZHL doesn't support that yet.
+// For now, just allow calling the function to trigger evaluation for my ASM patch at the end of the function, which caches the result.
+"558bec83e4f883ec0853568bf18b86":
+__thiscall void Entity_Familiar::GetMultiplier();
+
 "558bec83e4c083ec745356578bf9e8":
 __thiscall void Entity_Familiar::Render(Vector *offset);
 
